# BioIS

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build-all.sh  justfile  openapi.json  test-all.sh  test.http
.github/: copilot-instructions.md
.github/instructions/: api-client.instructions.md  backend.instructions.md  frontend.instructions.md
.github/workflows/: ci.yml  containers.yml  lint-pr-title.yml
api-client/: README.md  config.yaml  post-process.py
api-client/typescript/: README.md  git_push.sh  index.ts  package.json
api-client/typescript/.openapi-generator/: FILES
api-client/typescript/apis/: CapabilitiesApi.ts  CollectionsApi.ts  DefaultApi.ts  ProcessesApi.ts  UserApi.ts
api-client/typescript/docs/: CapabilitiesApi.md  CollectionsApi.md  DefaultApi.md  ProcessesApi.md  UserApi.md
api-client/typescript/models/: AdditionalParameter.ts  AdditionalParameters.ts  AnyField.ts  ArrayField.ts  AuthCodeResponse.ts  BiodiversitySensitiveAreasProcessInputs.ts  BiodiversitySensitiveAreasProcessOutputs.ts  BiodiversitySensitiveAreasProcessParams.ts  BooleanField.ts  BoundingBox.ts  Collection.ts  Collections.ts  Conformance.ts  Constraints.ts  Constraints1.ts  Constraints10.ts  Constraints10Enum.ts  Constraints11.ts  Constraints12.ts  Constraints12Enum.ts  Constraints13.ts  Constraints14.ts  Constraints1Enum.ts  Constraints1Minimum.ts  Constraints2.ts  Constraints3.ts  Constraints4.ts  Constraints5.ts  Constraints6.ts  Constraints7.ts  Constraints8.ts  Constraints9.ts  DataResource.ts  DateField.ts  DateTimeField.ts  DescriptionType.ts  DocumentationSource.ts  DurationField.ts  Exception.ts  Execute.ts  (+82 more)
api-client/typescript/types/: ObjectParamAPI.ts  ObservableAPI.ts  PromiseAPI.ts
backend/: .dockerignore  .sqlfluff  Cargo.toml  Dockerfile  README.md  diesel-guard.toml  diesel.toml  justfile  lint.sh
backend/conf/: default.toml
backend/examples/: axum.rs  query-geo-engine.rs
backend/migrations/2026-01-16-132117-0000_create_jobs/: down.sql  up.sql
backend/src/: auth.rs  collection_transactions.rs  config.rs  handler.rs  jobs.rs  lib.rs  main.rs  server.rs  state.rs  util.rs
backend/src/db/: mapping.rs  mod.rs  model.rs  schema.rs
backend/src/processes/: biodiversity_land_use.rs  echo.rs  habitat_distance.rs  hello.rs  impact_metrics.rs  mod.rs  ndvi.rs  parameters.rs  path_info.rs  util.rs
backend/src/processes/biodiversity_sensitive_areas/: description.md  example_query.pgsql  input_location_property.md  input_site_type_property.md  input_sites.md  mod.rs  output_biodiversity_sensitive_areas.md  output_documentation_sources.md  output_errors.md  output_inputs.md
backend/test-data/: DE5118301.wkt  DE5317307.wkt  DE5417402.wkt  marburg_poi.json  marburg_unistadion.json
bindings/: openapitools.json  package-lock.json  package.json
bindings/src/: index.ts
frontend/: .dockerignore  Caddyfile  Dockerfile  README.md  TODO.md  _theme-colors.scss  angular.json  eslint.config.js  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  biois.service.ts  error.spec.ts  error.ts  log-in.guard.ts  user.service.spec.ts  user.service.ts
frontend/src/app/create-new/: create-new.component.html  create-new.component.scss  create-new.component.spec.ts  create-new.component.ts
frontend/src/app/create-new-auto/: create-new-auto.component.html  create-new-auto.component.spec.ts  create-new-auto.component.ts  geo-json-field.spec.ts  geo-json-field.ts  simple-form-field.ts
frontend/src/app/dashboard/: dashboard.component.ts
frontend/src/app/landing-page/: landing-page.component.html  landing-page.component.scss  landing-page.component.spec.ts  landing-page.component.ts
frontend/src/app/navigation/: navigation.component.html  navigation.component.scss  navigation.component.spec.ts  navigation.component.ts  page-title.component.spec.ts  page-title.component.ts  title.service.ts
frontend/src/app/result/: data-resource-table.component.spec.ts  data-resource-table.component.ts  number-indicator.component.spec.ts  number-indicator.component.ts  result.component.html  result.component.scss  result.component.spec.ts  result.component.ts  row-overflow.directive.spec.ts  row-overflow.directive.ts
frontend/src/app/results/: jobs-datasource.ts  results.component.html  results.component.scss  results.component.spec.ts  results.component.ts
frontend/src/app/signin.component/: signin.component.html  signin.component.scss  signin.component.spec.ts  signin.component.ts
frontend/src/app/table/: table-datasource.ts  table.component.spec.ts  table.component.ts
frontend/src/app/util/: drag-and-drop.directive.spec.ts  drag-and-drop.directive.ts  long-text.component.spec.ts  long-text.component.ts  prevent-default.ts  processes.spec.ts  processes.ts  resize-signal.spec.ts  resize-signal.ts
k8s/: README.md  dev-config.yaml  pod.yaml
mock/: .gitignore  DE5118301.csv  DE5317307.csv  README.md
service/: Cargo.toml  openapi.json
service/src/: lib.rs  main.rs
test-client/: biodiversity-sensitive-areas.http  call-process.ipynb  call.http
