[package]
name = "BioIS"
version = "0.1.0"
publish = false
authors = [
    "Christian Beilschmidt <christian.beilschmidt@geoengine.de>",
    "Johannes Drönner <johannes.droenner@geoengine.de>",
    "Michael Mattig <michael.mattig@geoengine.de>",
]
license-file = "LICENSE"
# documentation = "https://docs.geoengine.io"
repository = "https://github.com/geo-engine/BioIS"
edition = "2024"

[lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
correctness = "deny"

# disable some pedantic lints
result_large_err = { level = "allow", priority = 1 }          # TODO: investigate this
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
non_ascii_literal = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
type_repetition_in_bounds = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# enable some restriction lints
dbg_macro = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

# disable some cargo lints
multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1" }
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
config = "0.15"
geoengine-datatypes = { git = "https://github.com/geo-engine/geoengine", branch = "main" }
geoengine-operators = { git = "https://github.com/geo-engine/geoengine", branch = "main" }
geoengine-openapi-client = { git = "https://github.com/geo-engine/openapi-client", branch = "rust" }
indoc = "2"
ogcapi = { git = "https://github.com/georust/ogcapi", branch = "changes-along-the-way", features = [
    "services",
    "common",
    "processes",
    "types",
] }
pretty_assertions = "1.4"
schemars = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.4"
utoipa = "5.3"
utoipa-axum = "0.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "catch-panic", "cors", "request-id", "sensitive-headers", "trace", "util"] }
