[package]
name = "BioIS"
version = "0.1.0"
publish = false
authors = [
    "Christian Beilschmidt <christian.beilschmidt@geoengine.de>",
    "Johannes Drönner <johannes.droenner@geoengine.de>",
    "Michael Mattig <michael.mattig@geoengine.de>",
]
license-file = "LICENSE"
# documentation = "https://docs.geoengine.io"
repository = "https://github.com/geo-engine/BioIS"
edition = "2024"
default-run = "BioIS"

[lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
correctness = "deny"

# disable some pedantic lints
result_large_err = { level = "allow", priority = 1 }          # TODO: investigate this
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
non_ascii_literal = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
type_repetition_in_bounds = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# enable some restriction lints
dbg_macro = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

# disable some cargo lints
multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
bb8 = "0.9" # wrt. `diesel-async`
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
diesel = { version = "2.3", features = ["postgres", "chrono", "uuid", "r2d2", "serde_json"] }
diesel-async = { version = "0.7", features = ["migrations", "postgres", "bb8"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = "2.3"
futures = "0.3"
geoengine-openapi-client = { git = "https://github.com/geo-engine/openapi-client", branch = "rust" }
indoc = "2.0"
nom = "8.0"
ogcapi = { git = "https://github.com/georust/ogcapi", branch = "modify-openapi", default-features = false, features = [
    "common",
    "drivers",
    "processes",
    "services",
    "types",
] }
o2o = "0.5"
pretty_assertions = "1.4"
schemars = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
utoipa = { version = "5.3", features = ["uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.20", features = ["v7"] }
tower = "0.5"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
httptest = "0.16"
tempfile = "3.24"
