[package]
name = "biois-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "biois_service"
path = "src/lib.rs"

[[bin]]
name = "biois-service"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
